[package]
name = "Task-Management-Service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "^4.8"
uuid = { version = "^1.11.0", features = ["v8"]}
serde = { version = "^1", features = ["derive"]}
aws-config = "^0.100"
aws-sdk-dynamodb = "^0.38"
env_logger = "^0.11"
log = "^0.4"
strum_macros = "^0.26"
strum = { version = "^0.26", features = ["derive"]}
derive_more = "^0.99"
